refactor: added validation for candidate application form/reference form fields
